# curve-my-corners

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  compile_commands.json
config/: input.json
include/: Entry.hpp  FileOpenException.hpp  FileReadException.hpp  Serializer.hpp  source.hpp
scripts/: build.sh
src/: Entry.cpp  FileOpenException.cpp  FileReadException.cpp  Serializer.cpp  source.cpp
